--- a/src/index.ejs
+++ b/src/index.ejs
@@ -28,6 +28,7 @@
   
   <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script>
+  <link rel="stylesheet" href="/styles.css" />
   <% if (isLocal) { %>
     <script type="systemjs-importmap"  src="/importmap.json"></script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.js"></script>
