--- a/src/index.ejs
+++ b/src/index.ejs
@@ -25,10 +25,9 @@
     If you need to support Angular applications, uncomment the script tag below to ensure only one instance of ZoneJS is loaded
     Learn more about why at https://single-spa.js.org/docs/ecosystem-angular/#zonejs
   -->
-  
+  <link rel="stylesheet" href="/src/styles.scss" />
   <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script> 
   <script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script>
-  <link rel="stylesheet" href="/styles.css" />
   <% if (isLocal) { %>
     <script type="systemjs-importmap"  src="/importmap.json"></script>
     <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.js"></script>
@@ -38,16 +37,15 @@
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
   <% } %>
-
+  <!-- <meta http-equiv="Content-Security-Policy" content="connect-src http://198.27.76.185:9100 https: localhost:* ws://localhost:*"> -->
+  <meta http-equiv="Content-Security-Policy" content="connect-src http://198.27.76.185:9100 https: localhost:* ws://localhost:* 'self'">
 </head>
-<body>
+<body style="background-color: #f1f5f9;">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
   <script>
     System.import('@shell/root-config');
-    // System.import('@shell/mf-auth-navbar');
-    // System.import('@shell/mf-auth-sidebar');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
