--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,1 @@
-// @use './assets/_sass_variables' as *;
-@import './assets/_responsive_root.scss';
-
-// @import './assets/theme/vela-orange/theme.scss';
+@use './assets/layout.scss';
