--- a/src/assets/_content.scss
+++ b/src/assets/_content.scss
@@ -1,5 +1,5 @@
 .layout-content-wrapper {
-    padding-top: 4rem;
+    // padding-top: 4rem;
 
     .layout-content {
         min-height: calc(100vh - 11.28rem);
