--- a/src/index.ejs
+++ b/src/index.ejs
@@ -36,8 +36,7 @@
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
   <% } %>
-  <!-- <meta http-equiv="Content-Security-Policy" content="connect-src http://198.27.76.185:9100 https: localhost:* ws://localhost:* 'self'"> -->
-  <meta http-equiv="Content-Security-Policy" content="connect-src https: http://apisistemas.ddns.net:9100 localhost:* ws://localhost:* 'self';">
+  <meta http-equiv="Content-Security-Policy" content="connect-src https: http://apisistemas.ddns.net:* localhost:* ws://localhost:* 'self';">
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';"> -->
 </head>
 
