--- a/src/assets/layout.scss
+++ b/src/assets/layout.scss
@@ -17,4 +17,4 @@
 @use './config' as *;
 @use './breadcrumb' as *;
 @use './responsive' as *;
-@use './_overrides' as *;;
+@use './_overrides' as *;
